--- a/Predicting_Housing_Prices.ipynb
+++ b/Predicting_Housing_Prices.ipynb
@@ -717,6 +717,8 @@
     "    lr=LinearRegression()\n",
     "    lr.fit(train[features],train[\"SalePrice\"])\n",
     "    price=lr.predict(test[features])\n",
+    "    plt.scatter(test["SalePrice"], price)\n",
+    "    plt.title("Predicted versus Actual")\n",
     "    mse=mean_squared_error(test[\"SalePrice\"],price)\n",
     "    rmse=mse**(1/2)\n",
     "    return rmse\n",
